--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>something</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
-    <h1 id=title>This works</h1>
+<body id=back>
+    <h1 id=title class="btn">This works</h1>
     <script src="./index.js"></script>
 </body>
 </html>
