--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>something</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<body id=back>
-    <h1 id=title class="btn">This works</h1>
-    <script src="./index.js"></script>
+<body>
+    <div class="js-clock">
+        <h1>00:00</h1>
+    </div>
+    <script src="./clock.js"></script>
 </body>
 </html>
