--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <ul class="js-toDoList">
 
     </ul>
-    <script src="./clock.js"></script>
-    <script src="./gretting.js"></script>
+    <script src="clock.js"></script>
+    <script src="gretting.js"></script>
     <script src="todo.js"></script>
+    <script src="bg.js"></script>
 </body>
 </html>
